[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/menu/elements/Separator.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/menu/layouts/empty_layout.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/menu/elements/ListButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/menu/layouts/layout_04.gd" type="Script" id=4]

[node name="LayoutContainer" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="TopPlaceHolder" parent="." index="0"]
margin_bottom = 132.0

[node name="ListButton" parent="." index="1" instance=ExtResource( 3 )]
margin_top = 132.0
margin_bottom = 172.0

[node name="Left" parent="ListButton/HBoxContainer" index="0"]
text = "  ENGLISH"

[node name="Seperator" parent="." index="2" instance=ExtResource( 1 )]
margin_top = 172.0
margin_bottom = 180.0

[node name="ListButton2" parent="." index="3" instance=ExtResource( 3 )]
margin_top = 180.0
margin_bottom = 220.0

[node name="Left" parent="ListButton2/HBoxContainer" index="0"]
text = "  русский"

[node name="Seperator2" parent="." index="4" instance=ExtResource( 1 )]
margin_top = 220.0
margin_bottom = 228.0

[node name="ListButton3" parent="." index="5" instance=ExtResource( 3 )]
margin_top = 228.0
margin_bottom = 268.0

[node name="Left" parent="ListButton3/HBoxContainer" index="0"]
text = "  简体中文"

[node name="Seperator3" parent="." index="6" instance=ExtResource( 1 )]
margin_top = 268.0
margin_bottom = 276.0

[node name="ListButton4" parent="." index="7" instance=ExtResource( 3 )]
margin_top = 276.0
margin_bottom = 316.0

[node name="Left" parent="ListButton4/HBoxContainer" index="0"]
text = "  繁體中文"

[node name="Seperator5" parent="." index="8" instance=ExtResource( 1 )]
margin_top = 316.0
margin_bottom = 324.0

[node name="ListButton6" parent="." index="9" instance=ExtResource( 3 )]
margin_top = 324.0
margin_bottom = 364.0

[node name="Left" parent="ListButton6/HBoxContainer" index="0"]
text = "  日本語"

[node name="Seperator6" parent="." index="10" instance=ExtResource( 1 )]
margin_top = 364.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 40 )

[node name="ListButton5" parent="." index="11" instance=ExtResource( 3 )]
margin_top = 404.0
margin_bottom = 444.0

[node name="Left" parent="ListButton5/HBoxContainer" index="0"]
text = "  GO BACK"

[node name="BottomPlaceHolder" parent="." index="12"]
margin_top = 444.0

[editable path="ListButton"]
[editable path="Seperator"]
[editable path="ListButton2"]
[editable path="ListButton3"]
[editable path="ListButton4"]
[editable path="ListButton6"]
[editable path="ListButton5"]
